mlirfuzz/crashed/temp551924046505760529152.mlir7433208573511145417.log
generated/temp551924046505760529152.mlir:827:11: error: unexpected error: Test iterating `int64_t`: unable to iterate type
    %33 = vector.broadcast %c1918110872_i32 : i32 to vector<2xi32>
          ^
generated/temp551924046505760529152.mlir:827:11: error: unexpected error: Test iterating `uint64_t`: unable to iterate type
    %33 = vector.broadcast %c1918110872_i32 : i32 to vector<2xi32>
          ^
generated/temp551924046505760529152.mlir:827:11: error: unexpected error: Test iterating `APInt`: 1918110872, 1918110872
    %33 = vector.broadcast %c1918110872_i32 : i32 to vector<2xi32>
          ^
generated/temp551924046505760529152.mlir:827:11: error: unexpected error: Test iterating `IntegerAttr`: 1918110872 : i32, 1918110872 : i32
    %33 = vector.broadcast %c1918110872_i32 : i32 to vector<2xi32>
          ^
generated/temp551924046505760529152.mlir:901:16: error: unexpected error: Test iterating `int64_t`: 1765106691, 1765106691, 1765106691, 1765106691, 1765106691, 1765106691, 1765106691, 1765106691
        %170 = vector.broadcast %c1765106691_i64 : i64 to vector<8xi64>
               ^
generated/temp551924046505760529152.mlir:901:16: error: unexpected error: Test iterating `uint64_t`: 1765106691, 1765106691, 1765106691, 1765106691, 1765106691, 1765106691, 1765106691, 1765106691
        %170 = vector.broadcast %c1765106691_i64 : i64 to vector<8xi64>
               ^
generated/temp551924046505760529152.mlir:901:16: error: unexpected error: Test iterating `APInt`: 1765106691, 1765106691, 1765106691, 1765106691, 1765106691, 1765106691, 1765106691, 1765106691
        %170 = vector.broadcast %c1765106691_i64 : i64 to vector<8xi64>
               ^
generated/temp551924046505760529152.mlir:901:16: error: unexpected error: Test iterating `IntegerAttr`: 1765106691 : i64, 1765106691 : i64, 1765106691 : i64, 1765106691 : i64, 1765106691 : i64, 1765106691 : i64, 1765106691 : i64, 1765106691 : i64
        %170 = vector.broadcast %c1765106691_i64 : i64 to vector<8xi64>
               ^
generated/temp551924046505760529152.mlir:995:14: error: unexpected error: Test iterating `int64_t`: unable to iterate type
      %149 = vector.broadcast %cst_3 : f32 to vector<18xf32>
             ^
generated/temp551924046505760529152.mlir:995:14: error: unexpected error: Test iterating `uint64_t`: unable to iterate type
      %149 = vector.broadcast %cst_3 : f32 to vector<18xf32>
             ^
generated/temp551924046505760529152.mlir:995:14: error: unexpected error: Test iterating `APInt`: unable to iterate type
      %149 = vector.broadcast %cst_3 : f32 to vector<18xf32>
             ^
mlir-opt: /home/jacob/projects/MLIRSmith/llvm/include/llvm/Support/Casting.h:572: decltype(auto) llvm::cast(From&) [with To = mlir::IntegerAttr; From = mlir::Attribute]: Assertion `isa<To>(Val) && "cast<Ty>() argument of incompatible type!"' failed.
PLEASE submit a bug report to https://github.com/llvm/llvm-project/issues/ and include the crash backtrace.
Stack dump:
0.	Program arguments: ../build/bin/mlir-opt --verify-diagnostics --convert-linalg-to-loops --test-vector-to-vector-lowering --symbol-dce --test-linalg-data-layout-propagation --tosa-to-arith --test-elements-attr-interface --test-textual-pm-nested-pipeline --test-generic-ir-region-visitors-interrupt --test-take-body generated/temp551924046505760529152.mlir
Stack dump without symbol names (ensure you have llvm-symbolizer in your PATH or set the environment var `LLVM_SYMBOLIZER_PATH` to point to it):
0  mlir-opt        0x000055fc82657bdb llvm::sys::PrintStackTrace(llvm::raw_ostream&, int) + 59
1  mlir-opt        0x000055fc826549cc
2  libpthread.so.0 0x00007fe43d4ac980
3  libc.so.6       0x00007fe43c0d9e87 gsignal + 199
4  libc.so.6       0x00007fe43c0db7f1 abort + 321
5  libc.so.6       0x00007fe43c0cb3fa
6  libc.so.6       0x00007fe43c0cb472
7  mlir-opt        0x000055fc84c28782
8  mlir-opt        0x000055fc84c2da74
9  mlir-opt        0x000055fc84c2f4fc
10 mlir-opt        0x000055fc84c286a9
11 mlir-opt        0x000055fc84c2e505
12 mlir-opt        0x000055fc84dcf301 mlir::detail::OpToOpPassAdaptor::run(mlir::Pass*, mlir::Operation*, mlir::AnalysisManager, bool, unsigned int) + 1297
13 mlir-opt        0x000055fc84dd0223
14 mlir-opt        0x000055fc84dd08c1 mlir::PassManager::run(mlir::Operation*) + 1153
15 mlir-opt        0x000055fc84dc0efc
16 mlir-opt        0x000055fc84dc2804
17 mlir-opt        0x000055fc84dc2a71
18 mlir-opt        0x000055fc84ec8260 mlir::splitAndProcessBuffer(std::unique_ptr<llvm::MemoryBuffer, std::default_delete<llvm::MemoryBuffer>>, llvm::function_ref<mlir::LogicalResult (std::unique_ptr<llvm::MemoryBuffer, std::default_delete<llvm::MemoryBuffer>>, llvm::raw_ostream&)>, llvm::raw_ostream&, bool, bool) + 96
19 mlir-opt        0x000055fc84dbbbc9 mlir::MlirOptMain(llvm::raw_ostream&, std::unique_ptr<llvm::MemoryBuffer, std::default_delete<llvm::MemoryBuffer>>, mlir::DialectRegistry&, mlir::MlirOptMainConfig const&) + 185
20 mlir-opt        0x000055fc84dc2d9a mlir::MlirOptMain(int, char**, llvm::StringRef, mlir::DialectRegistry&) + 746
21 mlir-opt        0x000055fc825aa0c5 main + 165
22 libc.so.6       0x00007fe43c0bcc87 __libc_start_main + 231
23 mlir-opt        0x000055fc8262b95a _start + 42
Aborted
